# sample-c-app

./: meson.build
src/: main.c
